# libvmod-cfg

./: .gitignore  .travis.yml  COPYING  Dockerfile  LICENSE  Makefile.am  README.rst  Vagrantfile  configure.ac  docker-compose.yml
.github/workflows/: main.yml
debian/: changelog  control  copyright  dirs
redhat/: vmod-cfg.spec
src/: Makefile.am  cJSON.c  duk_config.h  duktape.c  duktape.h  helpers.c  helpers.h  ini.c  remote.c  remote.h  script_helpers.c  script_helpers.h  script_javascript.c  script_javascript.h  script_javascript_helpers.h  script_javascript_helpers.js  script_lua.c  script_lua.h  script_lua_helpers.h  script_lua_helpers.lua  variables.c  variables.h  vmod_cfg.c  vmod_cfg.vcc  vmod_cfg_env.c  vmod_cfg_file.c  vmod_cfg_rules.c  vmod_cfg_script.c
src/tests/: VCL-temperature-and-discard.vtc  env.get.vtc  env.is-set.vtc  file.backup.vtc  file.dump.vtc  file.ini.get.vtc  file.ini.is-set.vtc  file.inspect.vtc  file.json.get.vtc  file.json.is-set.vtc  file.period.vtc  file.reload.vtc  file.remote.vtc  rules.get.vtc  rules.inspect.vtc  runner.sh  script.basics.vtc  script.blocked-workers.vtc  script.inspect.vtc  script.javascript-basics-1.vtc  script.javascript-basics-2.vtc  script.javascript-basics.vtc  script.lua-basics-1.vtc  script.lua-basics-2.vtc  script.lua-basics.vtc  script.regexps.vtc
